--- a/springTest/src/main/resources/META-INF/conf/activemq.properties
+++ b/springTest/src/main/resources/META-INF/conf/activemq.properties
@@ -1,6 +1,6 @@
-activemq.broker.config=classpath:META-INF/conf/activemq-persistent.xml
+activemq.broker.config=classpath:activemq-persistent.xml
 activemq.broker.url=tcp\://127.0.0.1:61616
-activemq.producer.timeToLive=30000
+activemq.producer.timeToLive=3000000
 activemq.producer.sessionCacheSize=20
 activemq.asyncSettle.initConsumer=5
 activemq.asyncSettle.maxConsumer=50
