--- a/springTest/pom.xml
+++ b/springTest/pom.xml
@@ -139,6 +139,7 @@
 		<dependency>
             <groupId>opensymphony</groupId>
             <artifactId>quartz-all</artifactId>
+            <version>1.6.3</version>
         </dependency>
 		
 		<dependency>
